BB-18469: Layout broken on Product View Page on FronStore if attribute "Images" is not moved to a separate group of attributes - Fix styles for image gallery in general group - Fix styles for digital assets popup - Fix overlap issue with promo sticker when gallery is enagled on PDP - Fix styles for image gallery in custom groups

--- a/src/Oro/Bundle/ProductBundle/Resources/public/blank/scss/variables/product-view-media/gallery-config.scss
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/blank/scss/variables/product-view-media/gallery-config.scss
@@ -4,10 +4,14 @@ $product-view-media-gallery-border-width: 1px !default;
 $product-view-media-gallery-border: $product-view-media-gallery-border-width solid get-color('additional', 'light') !default;
 $product-view-media-gallery-max-height: 380px !default;
 $product-view-media-gallery-image-max-height: $product-view-media-gallery-max-height - ($product-view-media-gallery-border-width * 2) !default;
+$product-view-media-gallery-z-index: z('base') !default;
+
+$product-view-media-gallery-tab-content-max-width: 380px !default;
 
 $product-view-media-gallery-nav-arrow-width: 20px !default;
 $product-view-media-gallery-nav-max-height: 77px !default;
-$product-view-media-gallery-nav-offset: 20px $product-view-media-gallery-nav-arrow-width 0 !default;
+$product-view-media-gallery-nav-offset-top: 20px !default;
+$product-view-media-gallery-nav-offset: $product-view-media-gallery-nav-offset-top $product-view-media-gallery-nav-arrow-width 0 !default;
 $product-view-media-gallery-nav-item-offset-h: $offset-x-s !default;
 $product-view-media-gallery-nav-item-offset-inner: 0 $product-view-media-gallery-nav-item-offset-h !default;
 $product-view-media-gallery-nav-image-border-color: 1px solid get-color('additional', 'light') !default;
@@ -19,3 +23,5 @@ $product-view-media-gallery-nav-arrow-icon-prev: $fa-var-angle-left !default;
 $product-view-media-gallery-nav-arrow-icon-next: $fa-var-angle-right !default;
 $product-view-media-gallery-nav-arrow-icon-size: $base-font-size !default;
 $product-view-media-gallery-nav-arrow-side-position: -$product-view-media-gallery-nav-arrow-width !default;
+
+$product-view-media-gallery-nav-tab-content-max-width: $product-view-media-gallery-tab-content-max-width - $product-view-media-gallery-nav-arrow-width * 2 !default;
